@@ -4,6 +4,8 @@
     * Framework changes:
         * FuseUI: Fix undef warning. Ensure that files finish with "\n". 
         Fix bug where value 0 was shown as an empty file.
+        * Added PlainFile backend (each config parameter is stored in its own file. useful for
+        some dpkg data)
 
 2011-01-10 Dominique Dumont  <domi.dumont@free.fr> 1.230
 
